metadata/OrgSetup/objects/RateAdjustmentByCreditScore__c.object
<CustomObject>
	<fullName>RateAdjustmentByCreditScore__c</fullName>
	<label>RateAdjustmentByCreditScore</label>
	<pluralLabel>RateAdjustmentByCreditScores</pluralLabel>
	<sharingModel>Private</sharingModel>
	<nameField>
        <label>RateAdjustmentByCreditScore Name</label>
        <type>AutoNumber</type>
    </nameField>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RateAdjustmentByCreditScoreProduct</relationshipLabel>
        <relationshipName>RateAdjustmentByCreditScoreProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LowerBound__c</fullName>
        <label>LowerBound</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpperBound__c</fullName>
        <label>UpperBound</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierValue__c</fullName>
        <label>TierValue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>TierType__c</fullName>
        <label>TierType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Override</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>